[gd_scene load_steps=8 format=3 uid="uid://dbj64rppvkwrb"]

[ext_resource type="Script" path="res://game/game.gd" id="1_wxm0k"]
[ext_resource type="PackedScene" uid="uid://c5vdbsv8glknj" path="res://game/knife.tscn" id="2_w7uxv"]
[ext_resource type="PackedScene" uid="uid://dawj4fgy7yo5y" path="res://game/lover.tscn" id="3_waygq"]
[ext_resource type="Texture2D" uid="uid://b2ctl6f2nwmd7" path="res://game/lovers/left.png" id="4_1nyuy"]
[ext_resource type="Texture2D" uid="uid://c3fnlxmdbofj6" path="res://game/lovers/right.png" id="5_y0dqn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_88srw"]
size = Vector2(579, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rrry6"]
size = Vector2(224.941, 11.5942)

[node name="Game" type="Node2D"]
script = ExtResource("1_wxm0k")
flip_duration = 0.16

[node name="Knife" parent="." instance=ExtResource("2_w7uxv")]
position = Vector2(566, 288)

[node name="LoverL" parent="." instance=ExtResource("3_waygq")]
position = Vector2(93, 328)

[node name="Left" type="Sprite2D" parent="LoverL"]
position = Vector2(80.0001, -46)
scale = Vector2(0.398547, 0.398547)
texture = ExtResource("4_1nyuy")

[node name="LoverR" parent="." instance=ExtResource("3_waygq")]
position = Vector2(909, 343)
is_player = true

[node name="Right" type="Sprite2D" parent="LoverR"]
position = Vector2(27, -84)
scale = Vector2(0.404676, 0.404676)
texture = ExtResource("5_y0dqn")

[node name="DiceTray" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="DiceTray"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DiceTray/StaticBody2D"]
position = Vector2(564, 427)
shape = SubResource("RectangleShape2D_88srw")

[node name="StaticBody2D2" type="StaticBody2D" parent="DiceTray"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DiceTray/StaticBody2D2"]
position = Vector2(564, 631)
shape = SubResource("RectangleShape2D_88srw")

[node name="StaticBody2D3" type="StaticBody2D" parent="DiceTray"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DiceTray/StaticBody2D3"]
position = Vector2(274, 527.399)
rotation = 1.55966
shape = SubResource("RectangleShape2D_rrry6")

[node name="StaticBody2D4" type="StaticBody2D" parent="DiceTray"]
position = Vector2(578, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DiceTray/StaticBody2D4"]
position = Vector2(274, 527.399)
rotation = 1.55966
shape = SubResource("RectangleShape2D_rrry6")

[node name="DiceSpawnAreas" type="Node2D" parent="."]

[node name="BoundsLeft" type="Node2D" parent="DiceSpawnAreas"]

[node name="TopLeft" type="Node2D" parent="DiceSpawnAreas/BoundsLeft"]
position = Vector2(307, 477)

[node name="BottomR" type="Node2D" parent="DiceSpawnAreas/BoundsLeft"]
position = Vector2(390, 591)

[node name="BoundsRight" type="Node2D" parent="DiceSpawnAreas"]

[node name="TopLeft" type="Node2D" parent="DiceSpawnAreas/BoundsRight"]
position = Vector2(710, 469)

[node name="BottomRight" type="Node2D" parent="DiceSpawnAreas/BoundsRight"]
position = Vector2(820, 595)

[node name="GridContainer" type="GridContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
columns = 2

[node name="D6" type="Button" parent="GridContainer"]
layout_mode = 2
focus_mode = 0
text = "d6"

[node name="D3" type="Button" parent="GridContainer"]
layout_mode = 2
focus_mode = 0
text = "d3"

[node name="Copy" type="Button" parent="GridContainer"]
layout_mode = 2
focus_mode = 0
text = "copy"

[node name="Fib" type="Button" parent="GridContainer"]
layout_mode = 2
focus_mode = 0
text = "fibonacci"

[node name="Pi" type="Button" parent="GridContainer"]
layout_mode = 2
focus_mode = 0
text = "pi"

[node name="Turncount" type="Button" parent="GridContainer"]
layout_mode = 2
focus_mode = 0
text = "turncount
"

[node name="DeleteDiceButton" type="Button" parent="GridContainer"]
layout_mode = 2
text = "del"

[node name="TurnCountLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 538.0
offset_right = 578.0
offset_bottom = 23.0
grow_horizontal = 2

[connection signal="start_rolling_dice" from="LoverL" to="." method="roll_dice"]
[connection signal="start_rolling_dice" from="LoverR" to="." method="roll_dice"]
[connection signal="pressed" from="GridContainer/D6" to="." method="roll_dice" binds= ["d6", true]]
[connection signal="pressed" from="GridContainer/DeleteDiceButton" to="." method="_on_delete_dice_button_pressed"]
